2002-03-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03162] Re: "ttp:" is marked instead of "http:" by MARL_URL
	* main.c (chkURLBuffer): "mailto" removed when USE_W3MMAILER
		in this case, chkExternalURIBuffer() will mark mailto: URL.

2002-03-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03160] Re: "ttp:" is marked instead of "http:" by MARL_URL
	* NEWS: mark_all_pages
	* anchor.c (reAnchorAny): check MarkAllPages
	* fm.h (MarkAllPages): added
	* rc.c (CMT_MARK_ALL_PAGES): added
		(mark_all_pages): added

2002-03-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03159] "ttp:" is marked instead of "http:" by MARL_URL
	* main.c (chkURLBuffer): check internal URLs first

2002-03-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (set_tty): s/term_info/w3m_term_info/g;
		struct term_info is defined in FreeBSD's sys/consio.h
		reported by KOIE Hidetaka <hide@koie.org>

2002-03-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03146] Re: header option
	* main.c (make_optional_header_string): cleanups

2002-03-28  Yuuichi Teranishi <teranisi@gohome.org>

	* [w3m-dev 03145] header option
	* main.c (MAIN): hide args for security

2002-03-23  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03140] Forward: Bug#139305: 
	   w3m: EXTERN_LINK does not work if href ends with ampersand
	* main.c (invoke_browser): check bg by browser

2002-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* terms.c (term_title): use ttyf instead of stderr

2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03137] Re: w3mman.1
	* XMakefile (MAN1): added
		    (MAN1_JA): added
		    (install-core): install man
		    (install-scripts): pass MAN_DIR
		    (uninstall): uninstall man, pass MAN_DIR to subdirs
	* config.h.dist (MAN_DIR): added
			(MAN1_DIR): added
			(MAN1_JA_DIR): added
	* configure: -mandir
		  (config.h): add MAN_DIR, MAN1_DIR, MAN1_JA_DIR
	* scripts/w3mman/Makefile (MAN1_DIR): added
